View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030756 | Open CASCADE | OCCT:Visualization | public | 2019-05-29 14:28 | 2019-06-01 13:59 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0030756: Visualization, TKOpenGl - capping plane does not work for ZLayer with non-zero origin | ||||
Description | Defining non-zero origin to ZLayer results in capping plane being misplaced (clipping works, but not capping). | ||||
Steps To Reproduce | pload MODELING VISUALIZATION box b 1 2 3 vclear vclose ALL vinit View1 vzbufftrihedron vaxo vdisplay -dispMode 1 b vfit vclipplane p 1 -equation 0 1 0 -1 -set -capping 1 if { [vreadpixel 200 200 rgb name] != "GRAY13" } { puts "Error" } vzlayer DEFAULT -origin 0 10 0 if { [vreadpixel 200 200 rgb name] != "GRAY13" } { puts "Error" } | ||||
Tags | No tags attached. | ||||
Test case number | bugs/vis/bug30756 | ||||
|
Branch CR30756 has been created by kgv. SHA-1: 0df0fe88073e94f6c11c6941747708d01ca1b11f Detailed log of new commits: Author: kgv Date: Wed May 29 15:22:10 2019 +0300 0030756: Visualization, TKOpenGl - capping plane does not work for ZLayer with non-zero origin |
|
Patch is ready for review. |
|
Branch CR30756 has been updated forcibly by kgv. SHA-1: 07aca8e79ff0654182e1bbbe7ab7b1c85bf865f9 |
|
Branch CR30756 reviewed without remarks. |
|
Combination - OCCT branch : CR30756 master SHA - 0df0fe88073e94f6c11c6941747708d01ca1b11f d67d4b811012eef8913d3c535c29654d0acf3c4c Products branch : master SHA - a9ff0b340afc3724a2378364c2f8a4faf89254d6 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16271.170000000011 / 16292.829999999974 [-0.13%] Products Total CPU difference: 10475.440000000055 / 10481.610000000046 [-0.06%] Windows-64-VC14: OCCT Total CPU difference: 17772.453125 / 17706.828125 [+0.37%] Products Total CPU difference: 12065.578125 / 12047.171875 [+0.15%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30756 has been deleted by inv. SHA-1: 07aca8e79ff0654182e1bbbe7ab7b1c85bf865f9 |
occt: master edc4ba21 2019-05-29 12:22:10 Committer: bugmaster Details Diff |
0030756: Visualization, TKOpenGl - capping plane does not work for ZLayer with non-zero origin OpenGl_CappingPlaneResource::updateTransform() now takes into account ZLayer origin. Fixed VT_ProcessKeyPress() passing arbitrary input to Draw::Atoi() leading to messages in console like "unclosed braces". |
Affected Issues 0030756 |
|
mod - src/OpenGl/OpenGl_CappingPlaneResource.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_CappingPlaneResource.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_ShaderManager.hxx | Diff File | ||
mod - src/ViewerTest/ViewerTest_ViewerCommands.cxx | Diff File | ||
add - tests/bugs/vis/bug30756 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-05-29 14:28 | kgv | New Issue | |
2019-05-29 14:28 | kgv | Assigned To | => kgv |
2019-05-29 14:29 | kgv | Product Version | 7.3.0 => 7.1.0 |
2019-05-29 15:22 | git | Note Added: 0084711 | |
2019-05-29 15:23 | kgv | Note Added: 0084712 | |
2019-05-29 15:23 | kgv | Assigned To | kgv => san |
2019-05-29 15:23 | kgv | Status | new => resolved |
2019-05-29 15:40 | git | Note Added: 0084713 | |
2019-05-30 18:05 | san | Note Added: 0084725 | |
2019-05-30 18:05 | san | Assigned To | san => bugmaster |
2019-05-30 18:05 | san | Status | resolved => reviewed |
2019-05-30 18:40 | bugmaster | Test case number | => bugs/vis/bug30756 |
2019-05-30 18:41 | bugmaster | Note Added: 0084727 | |
2019-05-30 18:41 | bugmaster | Status | reviewed => tested |
2019-06-01 13:50 | bugmaster | Changeset attached | => occt master edc4ba21 |
2019-06-01 13:50 | bugmaster | Status | tested => verified |
2019-06-01 13:50 | bugmaster | Resolution | open => fixed |
2019-06-01 13:59 | git | Note Added: 0084749 |