0030756: Visualization, TKOpenGl - capping plane does not work for ZLayer with non-zero origin

OpenGl_CappingPlaneResource::updateTransform() now takes into account ZLayer origin.

Fixed VT_ProcessKeyPress() passing arbitrary input to Draw::Atoi() leading
to messages in console like "unclosed braces".